[gd_scene load_steps=5 format=2]

[ext_resource path="res://Font/Hack/HackSmallHeader.tres" type="DynamicFont" id=1]
[ext_resource path="res://GUI/Themes/MenuTheme.tres" type="Theme" id=2]
[ext_resource path="res://GUI/MainMenu/StorySetup.gd" type="Script" id=3]

[sub_resource type="ButtonGroup" id=1]
resource_name = "difficulty"

[node name="StorySetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
margin_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
casual_button_path = NodePath("CenterContainer/Panel/VBoxContainer/CasualButton")
normal_button_path = NodePath("CenterContainer/Panel/VBoxContainer/NormalButton")
description_label_path = NodePath("CenterContainer/Panel/VBoxContainer/Description")
back_button_path = NodePath("CenterContainer/Panel/VBoxContainer/HBoxContainer/BackButton")
play_button_path = NodePath("CenterContainer/Panel/VBoxContainer/HBoxContainer/PlayButton")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CenterContainer"]
margin_left = 490.0
margin_top = 240.0
margin_right = 790.0
margin_bottom = 480.0
rect_min_size = Vector2( 300, 240 )
theme = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
margin_right = 260.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 1 )
text = "Difficulty"
align = 1

[node name="ReferenceRect" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 28.0
margin_right = 260.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 8 )

[node name="CasualButton" type="CheckBox" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 40.0
margin_right = 260.0
margin_bottom = 60.0
theme = ExtResource( 2 )
group = SubResource( 1 )
text = "Casual"

[node name="NormalButton" type="CheckBox" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 64.0
margin_right = 260.0
margin_bottom = 84.0
theme = ExtResource( 2 )
group = SubResource( 1 )
text = "Normal"

[node name="ReferenceRect2" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 88.0
margin_right = 260.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 8 )

[node name="Description" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 100.0
margin_right = 260.0
margin_bottom = 131.0
text = "If you see this text, something went wrong."
autowrap = true

[node name="ReferenceRect3" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 135.0
margin_right = 260.0
margin_bottom = 168.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 172.0
margin_right = 260.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 28 )

[node name="BackButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 28.0
rect_min_size = Vector2( 64, 0 )
theme = ExtResource( 2 )
text = "Back"

[node name="ReferenceRect" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 192.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 196.0
margin_right = 260.0
margin_bottom = 28.0
rect_min_size = Vector2( 64, 0 )
theme = ExtResource( 2 )
text = "Play"

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/CasualButton" to="." method="_on_CasualButton_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/NormalButton" to="." method="_on_NormalButton_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
